<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    android:fitsSystemWindows="false"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/Login_Layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:foreground="@color/cyan_800_overlay"
        android:src="@drawable/images_26"
        android:scaleType="centerCrop" />

    <LinearLayout android:orientation="vertical"
        android:padding="@dimen/spacing_large"
        android:layout_width="330.0dip"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true">

    <View
        android:layout_width="0.0dip"
        android:layout_height="50.0dip" />

    <TextView android:textAppearance="@style/Base.TextAppearance.AppCompat.Display2"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/nes" />

    <TextView android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/international" />

    <View
        android:layout_width="0.0dp"
        android:layout_height="75dp"/>

    <View
        android:layout_gravity="center_horizontal"
        android:background="@android:color/white"
        android:layout_width="50.0dip"
        android:layout_height="3.0dip" />

    <TextView android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_middle"
        android:text="@string/log_in" />

    <View
        android:layout_width="0.0dp"
        android:layout_height="20dp"/>

    <android.support.design.widget.TextInputLayout
        android:theme="@style/EditText.White.Hint"
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

    <android.support.design.widget.TextInputEditText
        android:theme="@style/EditText.White"
        android:textColor="@color/grey_10"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-4.0dip"
        android:layout_marginRight="-4.0dip"
        android:hint="@string/username"
        android:maxLines="1"
        android:singleLine="true"
        android:maxLength="50"
        android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="0.0dip"
        android:layout_height="@dimen/spacing_mlarge" />

    <android.support.design.widget.TextInputLayout
        android:theme="@style/EditText.White.Hint"
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

    <android.support.design.widget.TextInputEditText
        android:theme="@style/EditText.White"
        android:textColor="@color/grey_10"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-4.0dip"
        android:layout_marginRight="-4.0dip"
        android:hint="@string/password"
        android:maxLines="1"
        android:singleLine="true"
        android:maxLength="50"
        android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="0.0dip"
        android:layout_height="@dimen/spacing_mxlarge" />

        <RelativeLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.design.widget.FloatingActionButton
                android:textStyle="bold"
                android:id="@+id/login"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/cyan_800"
                app:backgroundTint="@android:color/white"
                app:fabSize="normal"
                app:rippleColor="@color/cyan_800"
                app:srcCompat="@drawable/ic_arrow_right"
                android:focusable="true" />


        </RelativeLayout>

        <View
            android:layout_width="0.0dip"
            android:layout_height="25dp"/>

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/sign_up_for_account"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium">

        <TextView
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register"
            android:onClick="registerHere"
            android:text="@string/register" />

    </LinearLayout>

        <View
            android:layout_width="0.0dip"
            android:layout_height="@dimen/spacing_medium" />

    </LinearLayout>

</RelativeLayout>

